<resources>
    <string name="app_name">Project: Valhe</string>

    <!--Buttons-->
    <string name="back">Back</string>
    <string name="playGame">Play Game</string>
    <string name="showInformation">Show Information</string>
    <string name="keepSelected">Keep Selected</string>
    <string name="showHowItWorks">Show how it works</string>

    <!--Textfields-->
    <string name="chooseCombination">1. Choose Combination</string>
    <string name="calculatePoints">2. Calculate points</string>
    <string name="done">Done</string>
    <string name="information">Information</string>
    <string name="sumOfAllTheDices">sum of all the dices</string>


    <!--Combination-->
    <string name="points">Points</string>
    <string name="combination">Combinations</string>
    <string name="sum">Sum</string>

    <string name="ones">Ones</string>
    <string name="twos">Twos</string>
    <string name="threes">Threes</string>Show how it works
    <string name="fours">Fours</string>
    <string name="fives">Fives</string>
    <string name="sixes">Sixes</string>
    <string name="threeOfAKind">Three of a kind</string>
    <string name="fourOfAKind">Four of a kind</string>
    <string name="littleStraight">Little Straight</string>
    <string name="bigStraight">Big Straight</string>
    <string name="house">House</string>
    <string name="chance">Chance</string>
    <string name="payment">Payment</string>

    <!--Information Text-->
    <string name="informationText_1">
        You have 12 rounds to play that game. At, first you have to
        role the dices. This can be done by moving the phone. You can repeat
        "shaking" at least 3 times. If you think you have a good setup.
        This has to be done in every round. However, it isn’t possible to select
        the same combination twice. If there is no combination than you get 0 points.
    </string>
    <string name="informationText_2">
        you can choose the best possible combination from a list by
        clicking the dices. A long press on a dice selects every dice
        that has the same number and writes down the points. A normal click
        selects the dices you touch and try to find a "Three of a kind",
        "Four of a kind", "Little Straight", "Big Straight", or "House" and
        calculates the points.
    </string>
    <string name="informationText_3">
        You get rewarded based on the sum of their reported scores, providing an incentive to lie:
        •	$0:50 : below 150 points
        •	$1:00 : between 150 and 200 points
        •	$2:00 : more than 200 points
    </string>
    <string name="diceDescription">Dices are cool</string>

    <string name="combinationList">Combination</string>

    <string-array name="combinations_array">
        <item>@string/ones</item>
        <item>@string/twos</item>
        <item>@string/threes</item>
        <item>@string/fours</item>
        <item>@string/fives</item>
        <item>@string/sixes</item>
        <item>@string/threeOfAKind</item>
        <item>@string/fourOfAKind</item>
        <item>@string/littleStraight</item>
        <item>@string/bigStraight</item>
        <item>@string/house</item>
    </string-array>

    <!--Notification Texts-->
    <string name="touchButtons">Through the dices</string>

</resources>
