<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/app"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/ic_android_mobile1">
    <TableLayout
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:layout_marginStart="30sp"
        android:layout_marginEnd="30sp"
        android:layout_marginTop="30sp"
        android:layout_marginBottom="30sp">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_marginBottom="30sp">

            <TextView
                android:id="@+id/title"
                android:text="@string/app_name"
                android:textSize="55sp"
                android:textColor="#1b1b1b"
                android:layout_width="fill_parent"

            />
        </TableRow>
        <TableRow>
            <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <TableRow
                    android:layout_marginBottom="30sp">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="258dp"
                        android:text="@string/information"
                        android:textColor="@color/textColor"
                        android:textSize="30sp" />
                </TableRow>
                <TableRow
                    android:layout_marginBottom="30sp">

                    <TextView
                        android:id="@+id/textView_2"
                        android:text="@string/informationText_1"
                        android:textSize="20sp"
                        android:layout_width="match_parent"
                        android:textColor="@color/textColor"/>
                </TableRow>

                <TableRow
                    android:layout_marginBottom="90sp">

                    <ImageView
                        android:layout_gravity="start"
                        android:gravity="center"
                        android:background="@drawable/dices"
                        android:layout_width="wrap_content"
                        android:contentDescription="@string/diceDescription" />

                    <TextView
                        android:id="@+id/textView_3"
                        android:text="@string/informationText_2"
                        android:textSize="20sp"
                        android:layout_width="match_parent"
                        android:textColor="@color/textColor"/>
                </TableRow>
                <TableRow
                    android:layout_marginBottom="30sp">

                    <TextView
                        android:id="@+id/textView_4"
                        android:text="@string/informationText_3"
                        android:layout_width="match_parent"
                        android:textSize="20sp"
                        android:textColor="@color/textColor"/>
                </TableRow>
            </TableLayout>
        </TableRow>
        <TableRow>
            <Switch
                android:id="@+id/back"
                android:text="@string/back"
                android:textSize="20sp"/>
        </TableRow>
    </TableLayout>
</FrameLayout>





