<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/app"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/ic_android_mobile1">
    <TableLayout
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:layout_marginStart="30sp"
        android:layout_marginEnd="30sp"
        android:layout_marginTop="30sp"
        android:layout_marginBottom="30sp">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_marginBottom="30sp">

            <TextView
                android:id="@+id/title"
                android:text="@string/app_name"
                android:textSize="55sp"
                android:textColor="#1b1b1b"/>
        </TableRow>
        <TableRow
            android:layout_marginBottom="60sp">
            <ImageView
                android:layout_gravity="start"
                android:background="@drawable/dices"
                android:contentDescription="@string/diceDescription"
                android:gravity="center" />

            <TextView
                android:id="@+id/textView_3"
                android:textSize="20sp" />

        </TableRow>
        <TableRow
            android:layout_marginBottom="20sp">
            <Button
                android:id="@+id/selected"
                android:background="@drawable/my_button"
                android:text="@string/keepSelected"
                android:textSize="20sp"/>
        </TableRow>
        <TableRow>
            <Switch
                android:id="@+id/back"
                android:text="@string/back"
                android:textSize="20sp"/>
        </TableRow>
    </TableLayout>
</FrameLayout>





