<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartGame"
    android:background="@drawable/ic_backgroundimage">

    <TableLayout
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:layout_marginStart="30sp"
        android:layout_marginEnd="30sp"
        android:layout_marginTop="30sp"
        android:layout_marginBottom="30sp">
        <TableRow
            android:layout_width="fill_parent">
            <TextView
                android:id="@+id/title"
                android:text="@string/app_name"
                android:textSize="55sp"
                android:textColor="#1b1b1b"
                android:layout_width="fill_parent" />
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_marginBottom="90sp">
            <FrameLayout>
                <View
                    android:id="@+id/myRectangleView"
                    android:layout_width="fill_parent"
                    android:layout_height="10sp"
                    android:background="@drawable/my_rect"/>
            </FrameLayout>
        </TableRow>
        <TableRow
            android:layout_marginBottom="10sp"
            android:layout_width="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="300sp"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TableLayout
                        android:id="@+id/dices"
                        android:layout_height="match_parent"
                        android:layout_width="match_parent">

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                            <ImageView
                                android:id="@+id/dice1"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@drawable/my_dice1" />
                            <ImageView
                                android:id="@+id/dice2"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@drawable/my_dice2" />
                        </TableRow>
                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                            <ImageView
                                android:id="@+id/dice3"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@drawable/my_dice3" />
                            <ImageView
                                android:id="@+id/dice4"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@drawable/my_dice4" />

                        </TableRow>
                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                            <ImageView
                                android:id="@+id/dice5"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@drawable/my_dice5" />
                            <ImageView
                                android:id="@+id/dice6"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@drawable/my_dice6" />
                        </TableRow>
                    </TableLayout>
                    <TextView
                        android:id="@+id/touchButtons"
                        android:layout_width="match_parent"
                        android:layout_height="fill_parent"
                        android:textColor="@color/primaryTextColor"
                        android:text="@string/touchButtons" />
                </LinearLayout>
                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:background="@drawable/my_layout">
                    <TableRow
                        android:layout_marginStart="10sp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/combination"
                            android:textColor="@color/primaryTextColor"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/points"
                            android:textAlignment="viewEnd"
                            android:textColor="@color/primaryTextColor"/>
                    </TableRow>
                    <TableRow
                        android:layout_marginStart="10sp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ones"
                            android:textColor="@color/primaryTextColor"/>
                    </TableRow>
                    <TableRow
                        android:layout_marginStart="10sp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/twos"
                            android:textColor="@color/primaryTextColor"/>
                    </TableRow>
                    <TableRow
                        android:layout_marginStart="10sp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/threes"
                            android:textColor="@color/primaryTextColor"/>
                    </TableRow>
                    <TableRow
                        android:layout_marginStart="10sp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/fours"
                            android:textColor="@color/primaryTextColor"/>
                    </TableRow>
                    <TableRow
                        android:layout_marginStart="10sp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/fives"
                            android:textColor="@color/primaryTextColor"/>
                    </TableRow>
                    <TableRow
                        android:layout_marginStart="10sp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sixes"
                            android:textColor="@color/primaryTextColor"/>
                    </TableRow>
                    <TableRow
                        android:layout_marginStart="10sp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/threeOfAKind"
                            android:textColor="@color/primaryTextColor"/>
                    </TableRow>
                    <TableRow
                        android:layout_marginStart="10sp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/fourOfAKind"
                            android:textColor="@color/primaryTextColor"/>

                    </TableRow>
                    <TableRow
                        android:layout_marginStart="10sp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/littleStraight"
                            android:textColor="@color/primaryTextColor"/>
                    </TableRow>
                    <TableRow
                        android:layout_marginStart="10sp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/bigStraight"
                            android:textColor="@color/primaryTextColor"/>
                    </TableRow>
                    <TableRow
                        android:layout_marginStart="10sp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/house"
                            android:textColor="@color/primaryTextColor"/>
                    </TableRow>
                    <TableRow
                        android:layout_marginStart="10sp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/chance"
                            android:textColor="@color/primaryTextColor"/>
                    </TableRow>
                    <TableRow
                        android:layout_marginStart="10sp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">selected</TableRow>
                    <TableRow
                        android:layout_marginStart="10sp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/payment"
                            android:textColor="@color/primaryTextColor"/>
                    </TableRow>
                </TableLayout>
            </LinearLayout>
        </TableRow>
        <TableRow
            android:layout_marginBottom="20sp">
            <Button
                android:id="@+id/selected"
                android:background="@drawable/my_button"
                android:text="@string/keepSelected"
                android:textSize="20sp"/>
        </TableRow>
        <TableRow>
            <Switch
                android:id="@+id/back"
                android:text="@string/back"
                android:textSize="20sp"/>
        </TableRow>
    </TableLayout>
</FrameLayout>