<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/app"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/ic_android_mobile1">

    <TableLayout
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:layout_marginStart="30sp"
        android:layout_marginEnd="30sp"
        android:layout_marginTop="30sp"
        android:layout_marginBottom="30sp">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_marginBottom="90sp">

            <TextView
                android:id="@+id/title"
                android:text="@string/app_name"
                android:textSize="55sp"
                android:textColor="@color/textColor"/>
        </TableRow>
        <TableRow
            android:layout_marginBottom="60sp">

            <LinearLayout
                android:layout_width="202dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:background="@drawable/dices"
                    android:contentDescription="@string/diceDescription"
                    android:gravity="center" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical"
                    android:background="@drawable/my_Layout"
                    android:layout_marginStart="30sp">

                    <TextView
                        android:id="@+id/combinations"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/chooseCombination"
                        android:textSize="15sp"
                        android:textColor="@color/textColor"
                        android:layout_marginStart="10sp"/>

                    <EditText
                        android:id="@+id/combinationsField"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="30sp"
                        android:textColor="@color/textColor"
                        android:layout_marginStart="10sp"/>

                    <TextView
                        android:id="@+id/SumOfTheDice"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/calculatePoints"
                        android:textSize="15sp"
                        android:textColor="@color/textColor"
                        android:layout_marginStart="10sp"/>

                    <EditText
                        android:id="@+id/SumOfTheDiceField"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10sp"/>
                </LinearLayout>
            </LinearLayout>
        </TableRow>
        <TableRow
            android:layout_marginBottom="20sp">
            <Button
                android:id="@+id/selected"
                android:text="@string/done"
                android:textSize="20sp"
                android:background="@drawable/my_button" />
        </TableRow>
        <TableRow>
            <Switch
                android:id="@+id/back"
                android:text="@string/back"
                android:textSize="20sp"/>
        </TableRow>
    </TableLayout>
</FrameLayout>





