<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/app"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/ic_android_mobile1">
    <TableLayout
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:layout_marginStart="30sp"
        android:layout_marginEnd="30sp"
        android:layout_marginTop="30sp"
        android:layout_marginBottom="30sp">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_marginBottom="30sp">
            <TextView
                android:id="@+id/title"
                android:text="@string/app_name"
                android:textSize="55sp"
                android:textColor="@color/textColor"/>
        </TableRow>
        <TableRow>
            <FrameLayout
                android:layout_height="450sp">
            </FrameLayout>
        </TableRow>
        <TableRow
            android:layout_marginBottom="30sp">
            <Switch
                android:id="@+id/playGame"
                android:text="@string/playGame"
                android:textSize="20sp"
                android:textColor="@color/textColor"/>
        </TableRow>
        <TableRow>
            <Switch
                android:id="@+id/information"
                android:text="@string/showHowItWorks"
                android:textSize="20sp"
                android:textColor="@color/textColor"/>
        </TableRow>
    </TableLayout>
</FrameLayout>





