<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Information"
    android:background="@drawable/ic_backgroundimage">

    <TableLayout
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:layout_marginStart="30sp"
        android:layout_marginEnd="30sp"
        android:layout_marginTop="30sp"
        android:layout_marginBottom="30sp">
        <TableRow
            android:layout_width="fill_parent">
            <TextView
                android:id="@+id/title"
                android:text="@string/app_name"
                android:textSize="55sp"
                android:textColor="#1b1b1b"
                android:layout_width="fill_parent" />
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_marginBottom="70sp">
            <FrameLayout>
                <View
                    android:id="@+id/myRectangleView"
                    android:layout_width="fill_parent"
                    android:layout_height="10sp"
                    android:background="@drawable/my_rect"/>
            </FrameLayout>
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_marginBottom="30sp">
            <TextView
                android:layout_width="wrap_content"
                android:textColor="@color/primaryTextColor"
                android:text="@string/informationText_1" />
        </TableRow>
        <TableRow
            android:layout_marginBottom="30sp"
            android:layout_width="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <ImageView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_gravity="start"
                    android:background="@drawable/my_dices"
                    android:contentDescription="@string/diceDescription"
                    android:gravity="center"
                    android:layout_marginRight="20sp"/>
                <TextView
                    android:layout_width="210sp"
                    android:layout_height="wrap_content"
                    android:text="@string/informationText_2"
                    android:textColor="@color/primaryTextColor" />
            </LinearLayout>
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_marginBottom="30sp">
            <TextView
                android:layout_width="wrap_content"
                android:textColor="@color/primaryTextColor"
                android:text="@string/informationText_3" />
        </TableRow>
        <TableRow>
            <RelativeLayout
                android:background="@drawable/my_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/information_back">
                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:layout_alignParentLeft="false"

                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="false"
                    android:layout_marginTop="4sp"
                    android:layout_marginBottom="4sp"
                    android:background="@drawable/back_arrow" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="21sp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/back"
                    android:layout_marginLeft="2sp"
                    android:textColor="#F1F1F1" />
            </RelativeLayout>
        </TableRow>
    </TableLayout>

</RelativeLayout>