<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondScreen"
    android:background="@drawable/ic_backgroundimage">

    <TableLayout
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:layout_marginStart="30sp"
        android:layout_marginEnd="30sp"
        android:layout_marginTop="30sp"
        android:layout_marginBottom="30sp">

        <TableRow
            android:layout_width="fill_parent">
            <TextView
                android:id="@+id/title"
                android:text="@string/app_name"
                android:textSize="55sp"
                android:textColor="@color/textColor"/>
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_marginBottom="90sp">
            <FrameLayout>
                <View
                    android:id="@+id/myRectangleView"
                    android:layout_width="fill_parent"
                    android:layout_height="10sp"
                    android:background="@drawable/my_rect"/>
            </FrameLayout>
        </TableRow>
        <TableRow>
            <FrameLayout
                android:layout_height="400sp">
            </FrameLayout>
        </TableRow>
        <TableRow
            android:layout_marginBottom="30sp">
            <Switch
                android:id="@+id/playGame"
                android:text="@string/playGame"
                android:textSize="20sp"
                android:textColor="@color/textColor"/>
        </TableRow>
        <TableRow>
            <Switch
                android:id="@+id/information"
                android:text="@string/showHowItWorks"
                android:textSize="20sp"
                android:textColor="@color/textColor"/>
        </TableRow>
    </TableLayout>

</FrameLayout>